going tru spreadsheet notes rn

--- a/notes/conceptos.tex
+++ b/notes/conceptos.tex
@@ -1,25 +1,27 @@
 \section{Conceptos Clave}
 \begin{itemize}
-    \item {\textbf{Datos : }
+    \item {\textbf{Datos} : 
     \begin{itemize}
         \item {Conjunto de hechos}
         \item {Centro de la toma de decisiones, por lo que se deben reducir sesgos, lagunas y errores}
     \end{itemize}}
-    \item {\textbf{Ecosistema de Datos : }Todos los elementos que interactúan entre si para producir, administrar, almacenar, organizar, analizar y compartir datos
+    \item {\textbf{Ecosistema de Datos} : Todos los elementos que interactúan entre si para producir, administrar, almacenar, organizar, analizar y compartir datos
     \begin{itemize}
         \item {Esto incluye las herramientas de \textit{Hardware} y \textit{Software}}
     \end{itemize}}
-    \item {\textbf{Fórmula : }Set de instrucciones para un cálculo específico, aplicado usando datos disponibles. \textit{Ejemplos : }Promedio, Error, Desviación Estándar}
-    \item {\textbf{Función : }Comando preestablecido que realiza automáticamente una tarea, aplicado usando datos disponibles}
+    \item {\textbf{Atributo} : Característica o cualidad de los datos usados para etiquetar una columna}
+    \item {\textbf{Fórmula} : Set de instrucciones para un cálculo específico, aplicado usando datos disponibles. \textit{Ejemplos : }Promedio, Error, Desviación Estándar}
+    \item {\textbf{Operador} : Símbolo que nombra el tipo de operación o cálculo matemático a realizar}
+    \item {\textbf{Función} : Comando preestablecido que realiza automáticamente una tarea, aplicado usando datos disponibles}
     \item {\textbf{Algoritmo : }Proceso o set de reglas a seguir para realizar una tarea en específico}
-    \item {\textbf{\textit{Data-driven decision making : }}Uso de datos para guiar la Estrategia de Negocios 
+    \item {\textbf{\textit{Data-driven decision making}} : Uso de datos para guiar la Estrategia de Negocios 
     \begin{itemize}
         \item {Los datos nunca serán más poderosos que su combinación con experiencia humana, observación e intuición}
-        \item {\textit{\textbf{Data-driven != Data inspired : }}Explorar diversas fuentes de datos para encontrar similitudes entre ellas}
+        \item {\textit{\textbf{Data-driven != Data inspired}} : Explorar diversas fuentes de datos para encontrar similitudes entre ellas}
     \end{itemize}}
-    \item {\textbf{Expertos en la Materia : }Profesionales del área de estudio que pueden aportar conocimiento experto al análisis}
-    \item {\textbf{Interesado - \textit{Stakeholder} : }Persona que invierte tiempo y recurso en el proyecto, que le interesa el resultado del estudio}
-    \item {\textbf{Análisis de Negocios : }Matemática y estadística enfocada a recolectar, analizar e interpretar datos para realizar decisiones de negocio. Se identifican cuatro tipos según la \href{https://online.hbs.edu/blog/post/business-analytics-examples}{Escuela de Negocios de Harvard}:
+    \item {\textbf{Expertos en la Materia} : Profesionales del área de estudio que pueden aportar conocimiento experto al análisis}
+    \item {\textbf{Interesado - \textit{Stakeholder}} : Persona que invierte tiempo y recurso en el proyecto, que le interesa el resultado del estudio}
+    \item {\textbf{Análisis de Negocios} : Matemática y estadística enfocada a recolectar, analizar e interpretar datos para realizar decisiones de negocio. Se identifican cuatro tipos según la \href{https://online.hbs.edu/blog/post/business-analytics-examples}{Escuela de Negocios de Harvard}:
     \begin{itemize}
         \item {\textbf{Descriptivo : }Identificar tendencias y patrones}
         \item {\textbf{Predictivo : }Predicción de resultados en base a tendencias y patrones}
