--- a/notes/tipos.tex
+++ b/notes/tipos.tex
@@ -43,12 +43,12 @@
             \item {Ayudan a las empresas a realizar un seguimiento de su presencia en línea, en especial de los comentarios, tanto buenos como malos, de los clientes. Esto les da información que necesitan para mejorar y proteger su marca}
         \end{description}}
         \item {\paragraph{Cuatro 'V' para resumir Beneficios y Desafíos}
-        \begin{itemize}
-            \item{\textbf{Volumen} : Cantidad de datos}
-            \item{\textbf{Variedad} : Diferentes tipos de datos}
-            \item{\textbf{Velocidad} : Qué tan rápido se pueden procesar los datos}
-            \item{\textbf{Veracidad} : Calidad y fiabilidad de los datos}
-        \end{itemize}}
+        \begin{description}
+            \item[Volumen] : Cantidad de datos
+            \item[Variedad] : Diferentes tipos de datos
+            \item[Velocidad] : Qué tan rápido se pueden procesar los datos
+            \item[Veracidad] : Calidad y fiabilidad de los datos
+        \end{description}}
     \end{itemize}}
 \end{itemize}
 \begin{table}
@@ -59,19 +59,19 @@
         \hline
         \textbf{\textit{Small Data}} & \textbf{\textit{Big Data}} \\
         \hline
-        \begin{itemize}
+        \begin{description}
             \item {Describe un conjunto de datos compuesto por métricas específicas durante un periodo de tiempo corto y bien definido}
             \item {Por lo general se organizan y analizan en hojas de cálculo}
             \item {Es probable que los utilicen pequeñas y medianas empresas}
             \item {Fáciles de recopilar, almacenar, administrar, ordenar y representar visualmente}
             \item {Por lo general ya tienen un tamaño manejable para análisis}
-        \end{itemize} & \begin{itemize}
+        \end{description} & \begin{description}
             \item {Describe un conjunto de datos más amplio y menos específico que cubre un periodo extenso de tiempo}
             \item {Por lo general se mantienen en una DB y se consultan}
             \item {Es probable que lo utilicen grandes organizaciones}
             \item {Requiere mucho esfuerzo para recopilar, almacenar, administrar, clasificar y representar visualmente}
             \item {Por lo general, deben dividirse en porciones más pequeñas para organizarlos y analizarlos de manera efectiva para tomar decisiones}
-        \end{itemize} \\
+        \end{description} \\
         \hline
     \end{tabular}
 \end{table}
