working my way thru glossaries

--- a/notes/act.tex
+++ b/notes/act.tex
@@ -1,4 +1,4 @@
-\subsection{\textit{Act - }Preguntar}
+\subsection{\textit{Act} - Preguntar}
 \begin{itemize}
     \item {Definición del desafío/objetivo empresarial, junto a los lineamientos para lo que se considera exitoso}
     \item {Asegurarse de comprender las expectativas de los Stakeholders}
