--- a/notes/conceptos.tex
+++ b/notes/conceptos.tex
@@ -5,46 +5,34 @@
         \item {Conjunto de hechos}
         \item {Centro de la toma de decisiones, por lo que se deben reducir sesgos, lagunas y errores}
     \end{itemize}}
-    \item {\textbf{Ecosistema de Datos} : Todos los elementos que interactúan entre si para producir, administrar, almacenar, organizar, analizar y compartir datos
-    \begin{itemize}
-        \item {Esto incluye las herramientas de \textit{Hardware} y \textit{Software}}
-    \end{itemize}}
-    \item {\textbf{Atributo} : Característica o cualidad de los datos usados para etiquetar una columna}
-    \item {\textbf{Fórmula} : Set de instrucciones para un cálculo específico, aplicado usando datos disponibles. \textit{Ejemplos : }Promedio, Error, Desviación Estándar}
-    \item {\textbf{Operador} : Símbolo que nombra el tipo de operación o cálculo matemático a realizar}
-    \item {\textbf{Función} : Comando preestablecido que realiza automáticamente una tarea, aplicado usando datos disponibles}
-    \item {\textbf{Algoritmo : }Proceso o set de reglas a seguir para realizar una tarea en específico}
+    \item {\textbf{Ecosistema de Datos} : Todos los elementos que interactúan entre si para producir, administrar, almacenar, organizar, analizar y compartir datos. \textit{Esto incluye las herramientas de Hardware y Software}}
     \item {\textbf{\textit{Data-driven decision making}} : Uso de datos para guiar la Estrategia de Negocios 
     \begin{itemize}
         \item {Los datos nunca serán más poderosos que su combinación con experiencia humana, observación e intuición}
-        \item {\textit{\textbf{Data-driven != Data inspired}} : Explorar diversas fuentes de datos para encontrar similitudes entre ellas}
+        \item {\textit{\textbf{Data-driven ${\neq}$ Data inspired}} : Explorar diversas fuentes de datos para encontrar similitudes entre ellas}
     \end{itemize}}
-    \item {\textbf{Expertos en la Materia} : Profesionales del área de estudio que pueden aportar conocimiento experto al análisis}
-    \item {\textbf{Interesado - \textit{Stakeholder}} : Persona que invierte tiempo y recurso en el proyecto, que le interesa el resultado del estudio}
-    \item {\textbf{Análisis de Negocios} : Matemática y estadística enfocada a recolectar, analizar e interpretar datos para realizar decisiones de negocio. Se identifican cuatro tipos según la \href{https://online.hbs.edu/blog/post/business-analytics-examples}{Escuela de Negocios de Harvard}:
-    \begin{itemize}
-        \item {\textbf{Descriptivo : }Identificar tendencias y patrones}
-        \item {\textbf{Predictivo : }Predicción de resultados en base a tendencias y patrones}
-        \item {\textbf{Diagnóstico : }Evaluación del problema, búsqueda del problema raíz}
-        \item {\textbf{Prescriptivo : }Test y pruebas para encontrar el mejor resultado}
-    \end{itemize}}
-    
-    \item {\textbf{Análisis de Personas : }Análisis de datos enfocado en los empleados y su vida laboral, con tal de definir y crear un lugar de trabajo más productivo y empoderador}
-    
-    \item {\textbf{La Nube : }Ubicación virtual donde pueden almacenarse datos, en vez de utilizar un harddrive de computador}
+    \item {\textbf{\textit{Scope of Work} - Alcance del Trabajo} : Un esquema previamente acordado sobre el trabajo a realizar en un proyecto. Algunos contenidos básicos a cualquier alcance son entregables, hitos, cronogramas e informes. \textit{Declaración de Trabajo ${\neq}$ Alcance de Trabajo}:
+    \begin{description}
+        \item[Declaración]{ : Documento que identifica claramente los productos y servicios que un proveedor o contratista proporcionará a una organización. Incluye obbjetivos, directrices, programas y costos}
+        \item[Alcance]{ : Se basa en proyectos y establece las expectativas y límites de un proyecto. Puede incluirse en la Declaración previa para ayudar a definir los resultados del proyecto}
+    \end{description}}
 \end{itemize}
 
 \subsection{Diferencias entre Análisis y Ciencia de Datos}
 \begin{itemize}
-    \item {\textbf{Análisis de Datos : }
+    \item 
+\end{itemize}
+\begin{itemize}
+    \item {Diferencias entre Análisis y Ciencia de Datos}
+    \item {\textbf{Análisis de Datos} : 
     \begin{itemize}
         \item {Colecta, transformación, organización de datos, con el fin de sacar conclusiones, realizar predicciones y tomar decisiones informadas basadas en hechos}
         \item {Responder preguntas ya existentes, al proponer nuevas perspectivas en base a datos y sus fuentes}
-        \item {\textbf{Analista de Datos : }Persona que recolecta, transforma, organiza datos para ayudar a realizar decisiones informadas}
+        \item {\textbf{Analista de Datos} : Persona que recolecta, transforma, organiza datos para ayudar a realizar decisiones informadas}
     \end{itemize}}
-    \item {\textbf{Análisis Computacional de Datos : }
+    \item {\textbf{Análisis Computacional de Datos} : 
     \begin{itemize}
-        \item {\textit{Ciencia de los Datos }}
+        \item {\textit{Ciencia de los Datos}}
         \item {Creación de modelos, exploración de lo desconocido usando datos sin editar}
         \item {Creación de preguntas y problemas usando datos}
         \item {\textbf{Ciencia de Datos} contiene a los \textit{Ecosistemas de Datos} y al \textit{Análisis de Datos}}
