--- a/notes/destrezas.tex
+++ b/notes/destrezas.tex
@@ -4,8 +4,8 @@
 Cualidades y características asociadas con la resolución de problemas usando hechos
 \begin{description}
     \item[Curiosidad] : Querer aprender algo
-    \item[Entender Contexto] : Comprensión del ambiente en que se genera, produce o utiliza una idea
-    \item[Mentalidad Técnica] : Desglosar cosas en pasos o partes pequeñas, y trabajar con ellas de forma lógica y ordenada
+    \item[Entender \gls{cntxt}] : Comprensión del ambiente en que se genera, produce o utiliza una idea
+    \item[\gls{strctrdthnkng}] : Desglosar cosas en pasos o partes pequeñas, y trabajar con ellas de forma lógica y ordenada
     \item[Diseño de Datos] : Organización de la información por formatos, tipos o almacenamientos
     \item[Estrategia de datos] : Gestión de la gente, procesos y herramientas usadas en el Análisis de Datos
 \end{description}
@@ -24,10 +24,16 @@ Identificar y definir un problema, para luego resolverlo usando datos de forma o
     \end{description}}
 \end{description}
 
-\subsection{\textit{Structured Thinking} - Pensamiento Estructurado}
-Proceso en el que se reconoce el problema/situación y se organiza la información disponible, para revelar deficiencias, oportunidades y opciones.
+\subsection{Roles y Situaciones en el Estudio de Datos}
+\begin{description}
+    \item[\textit{Scope of Work} - Alcance del Trabajo]{ : Un esquema previamente acordado sobre el trabajo a realizar en un proyecto. Algunos contenidos básicos a cualquier alcance son entregables, hitos, cronogramas e informes. \textit{Declaración de Trabajo ${\neq}$ Alcance de Trabajo}:
+    \begin{description}
+        \item[Declaración]{ : Documento que identifica claramente los productos y servicios que un proveedor o contratista proporcionará a una organización. Incluye obbjetivos, directrices, programas y costos}
+        \item[Alcance]{ : Se basa en proyectos y establece las expectativas y límites de un proyecto. Puede incluirse en la Declaración previa para ayudar a definir los resultados del proyecto}
+    \end{description}}
+\end{description}
 
-\subsection{Roles clave en el Estudio de Datos}
+
 \begin{itemize}
     \item {\textbf{Analista de Datos} : Trabaja generalmente con DB, puede trabar creando paneles}
     \item {\textbf{Ingeniero de Datos} : Procesa los datos iniciales para crear un proceso viable. Generalmente es el encargado de prepararlos para los analistas y científicos}
