--- a/notes/herramientas.tex
+++ b/notes/herramientas.tex
@@ -2,28 +2,47 @@
 
 \subsection{\textit{Spreadsheets} - Hojas de Cálculo}
 \begin{description}
-    \item[Celda]{ : Combinación de filas y columnas que designa una posición. El orden es ColFil. \textit{Ejemplo : columna A fila 3 = A3}
+    \item[Celda]{ : Posición descrita usando filas y columnas. \textit{Ejemplo : columna A fila 3 = A3}
     \begin{description}
         \item[Referencia Relativa]{ : El valor de la celda cambia junto con la fórmula donde está presente, al arrastrarla o copiarla en otro lugar}
         \item[Referencia Absoluta]{ : El valor de la celda es fijo y no cambia con movimientos en fórmulas o celdas.\textit{Para realizar cambio entre absoluto y relativo, presionar F4}}
-    \end{description}
-    \begin{table}
-        \centering
-        \begin{tabular}{|p{5cm}|p{4.5cm}|p{4.5cm}|}
-            \hline
-            \multicolumn{3}{|c|}{Diferencias entre Referencias de Celdas} \\
-            \hline
-            & \textbf{Referencia Absoluta} & \textbf{Referencia Relativa} \\
-            \hline
-            \textbf{Ejemplos} & A1, C3, G2:G9 & \$A\$10, C\$2, \$D3 \\
-            \hline
-            \textbf{Si la celda se arrastra una columna a la derecha, una fila hacia abajo} & A10 $\rightarrow$ B11 & \$A10 $\rightarrow$ \$A11 \\
-            \hline
-        \end{tabular}
-    \end{table}}
-    \item{Para escribir fórmulas, generalmente se empieza con '='. Al escribirlo, aparece un menú de autocompletar que incluye fórmulas, nombres y \textit{strings}. \textit{Ejemplo : =SUM()}}
-    \item {En la esquina inferior derecha se muestra un cuadrado de \textbf{Llenado Automático} : al hacer clic y arrastrar, se rellenan otras celdas con el mismo valor o fórmula}
+        \begin{table}
+            \centering
+            \begin{tabular}{|p{5cm}|p{4.5cm}|p{4.5cm}|}
+                \hline
+                \multicolumn{3}{|c|}{Diferencias entre Referencias de Celdas} \\
+                \hline
+                & \textbf{Referencia Absoluta} & \textbf{Referencia Relativa} \\
+                \hline
+                \textbf{Ejemplos} & A1, C3, G2:G9 & \$A\$10, C\$2, \$D3 \\
+                \hline
+                \textbf{Si la celda se arrastra una columna a la derecha, una fila hacia abajo} & A10 $\rightarrow$ B11 & \$A10 $\rightarrow$ \$A11 \\
+                \hline
+            \end{tabular}
+        \end{table}
+        \item[Formato Condicional]{ : Es posible resaltar celdas con colores diferentes en función del contexto, como errores o valores importantes}
+    \end{description}}
+    \item[Fórmulas y Funciones]{ : 
+    \begin{description}
+        \item {Para empezar fórmulas, se empieza escribiendo '='. Al hacerlo, se despliega un menú que incluye fórmulas, nombres y \textit{strings}}
+        \item {No todas las funciones requieren operadores. \textit{Ejemplos : SUM, AVERAGE, COUNT, MIN, MAX}}
+        \item {Es posible combinar ambos, la fórmula entrega los criterios bajo los que una función se ejecuta. \textit{Ejemplo : =CONTAR:SI()}}
+        \item {En la esquina inferior derecha se muestra un cuadrado de \textbf{Llenado Automático} : al hacer clic y arrastrar, se rellenan otras celdas con el mismo término}
+        \item[Errores Comunes]{ : 
+        \begin{itemize}
+            \item {\textbf{\#DIV/0!} : Intento de dividir por cero o por una celda vacía}
+            \item {\textbf{\#ERROR()} : Fórmula no puede ser interpretada como input. \textit{Parsing error}}
+            \item {\textbf{\#N/A} : Los datos a usar en la fórmula no se encuentran en la hoja}
+            \item {\textbf{\#NAME?} : No se entiende el nombre de la fórmula o función}
+            \item {\textbf{\#NUM!} : Los cálculos de la fórmula o función no pueden realizarse}
+            \item {\textbf{\#VALUE!} : Error general para problemas con fórmulas o referencias de celda}
+            \item {\textbf{\#REF!} : Una fórmula referencia una celda no válida o eliminada}
+        \end{itemize}} 
+    \end{description}}
 \end{description}
+
+
+
 
 \subsection{\textit{DB + Queries} - Bases de Datos y Consultas}
 \begin{itemize}
@@ -76,13 +95,13 @@
 \end{itemize}
 
 \subsubsection{\textit{Report} - Informes}
-Recuento estático de datos, entregados de forma periódica a \textit{stakeholders}
+Recuento estático de datos, entregados de forma periódica a \Gls{stkhldrs}
 
 \subsubsection{\textit{Dashboard} - Panel}
 Monitoreo constante y en vivo de datos entrantes, con una ubicación central que los agrupa. El ingreso de datos es automático \textit{solo si la estructura de datos es la misma}
 \paragraph{Proceso para crear un panel}
     \begin{itemize}
-        \item {Identificar a \textit{stakeholders} que necesiten ver los datos y cómo los usarán, a través de preguntas efectivas}
+        \item {Identificar a \Gls{stkhldrs} que necesiten ver los datos y cómo los usarán, a través de preguntas efectivas}
         \item {Diseño del panel : encabezados claros para etiquetar información ; descripciones de texto concisas para cada visualización ; mostrar la información más importante en la parte superior}
         \item {Crear prototipos}
         \item {Seleccionar visualizaciones para utilizar en el panel : cambio de valores a lo largo del tiempo con gráficos de línea y barras ; contribución de cada parte al resultado final con gráficos circulares y de torta}
@@ -101,7 +120,7 @@ Monitoreo constante y en vivo de datos entrantes, con una ubicación central que
         \hline
         \multicolumn{3}{|c|}{Beneficios de paneles} \\
         \hline
-        & \textbf{Para analistas} & \textbf{Para \textit{stakeholders}} \\
+        & \textbf{Para analistas} & \textbf{Para \Gls{stkhldrs}} \\
         \hline
         \small{\textbf{Centralización}} & Compartir una única fuente de datos con los interesados & Trabajar con visión integral de datos, iniciativas y procesos \\
         \hline
@@ -126,7 +145,7 @@ Monitoreo constante y en vivo de datos entrantes, con una ubicación central que
             \item {Datos limpios y ordenados}
         \end{description} & \begin{description}
             \item {Automático e interactivo}
-            \item {Mejor acceso para \textit{stakeholders}}
+            \item {Mejor acceso para \Gls{stkhldrs}}
             \item {Bajo mantenimiento}
         \end{description} \\
         \hline
