U2 finished, moving to U3

--- a/notes/gloss.tex
+++ b/notes/gloss.tex
@@ -37,9 +37,9 @@
 }
 
 \newglossaryentry{stkhldrs}{
-    name = \textit{Stakeholders} - Interesados,
+    name = \textit{Stakeholders},
     sort = {stakeholders},
-    description = {Personas que invierten tiempo y recursos en el proyecto, y que les interesa el resultado final}
+    description = {\textit{Interesados}, personas que invierten tiempo y recursos en el proyecto, y que les interesa el resultado final}
 }
 
 \newglossaryentry{prblmdmn}{
