reorganizing U2 info on ask section

--- a/notes/destrezas.tex
+++ b/notes/destrezas.tex
@@ -4,8 +4,8 @@
 Cualidades y características asociadas con la resolución de problemas usando hechos
 \begin{description}
     \item[Curiosidad] : Querer aprender algo
-    \item[Entender \gls{cntxt}] : Comprensión del ambiente en que se genera, produce o utiliza una idea
-    \item[\gls{strctrdthnkng}] : Desglosar cosas en pasos o partes pequeñas, y trabajar con ellas de forma lógica y ordenada
+    \item[Entender \gls{cntxt}]
+    \item[\gls{strctrdthnkng}]
     \item[Diseño de Datos] : Organización de la información por formatos, tipos o almacenamientos
     \item[Estrategia de datos] : Gestión de la gente, procesos y herramientas usadas en el Análisis de Datos
 \end{description}
@@ -24,106 +24,34 @@ Identificar y definir un problema, para luego resolverlo usando datos de forma o
     \end{description}}
 \end{description}
 
-\subsection{Comunicación Clara y Efectiva}
-Mantención de buenas relaciones con colegas, \gls{stkhldrs} y miembros del equipo. Previo a la comunicación, hay que establecer
-\begin{itemize}
-    \item{Quién es la audiencia?}
-    \item{Qué es lo que ya saben?}
-    \item{Qué es lo que necesitan saber?}
-    \item{De qué forma puedo comunicarlo efectivamente?}
-\end{itemize}
-
-\subsubsection{Tips para comunicación efectiva}
-\begin{itemize}
-    \item {Aprender en el camino y realizar preguntas}
-    \item {Practicar buenos hábitos de escritura, para comunicación por escrito}
-    \item {Leer correos en voz alta antes de enviarlos}
-    \item {Responder en un tiempo adecuado}
-    \item {Ser claro con las necesidades}
-    \item {Contar una historia clara: 
-    \begin{itemize}
-        \item {Comparar los mismos tipos de datos}
-        \item {Visualizar con cuidado}
-        \item {Dejar de lado gráficos innecesarios}
-        \item {Realizar pruebas de importancia estadística}
-        \item {Prestar atención al tamaño de la muestra}
-    \end{itemize}}
-\end{itemize}
-
-\subsubsection{Cómo balancear expectativas y objetivos}
-\begin{itemize}
-    \item {Establecer una fecha límite razonable y realista}
-    \item {Destacar problemas para \gls{stkhldrs} con anticipación}
-    \item {Determinar expectativas realistas en toda etapa del proyecto}
-    \item {Identificar desafíos y posibles soluciones}
-    \item {Resolver conflictos 
-    \begin{itemize}
-        \item {Replantear el problema}
-        \item {Conversar con altura de miras}
-        \item {Entender el contexto del conflicto}
-    \end{itemize}}
-\end{itemize}
-
 \subsection{Reuniones y Presentaciones}
 \begin{table}
     \centering
-    \begin{tabular}{|p{4.8cm}|p{4.8cm}|p{4.8cm}}
+    \begin{tabular}{|p{4.8cm}|p{4.8cm}|p{4.7cm}}
         \hline
         \multicolumn{3}{|c|}{Prácticas en Reuniones} \\
         \hline
         \textbf{Antes} & \textbf{Durante}  &\textbf{Después} \\
         \hline
         \begin{description}
-            \item {Establecer propósitos, metas y resultados deseados, junto con preguntas o solicitudes a abordar}
-            \item {Reconocer a los asistentes y hacerlos participar en los diferentes puntos de vista y experiencia previa}
-            \item {Preparar y distribuir una \textbf{agenda} que incluya horas de inicio y finalización, lugar e información para casos remotos, objetivos y material complementario para revisar de antemano}
+            \item {Establecer propósitos, metas y resultados deseados}
+            \item {Determinar preguntas o solicitudes a abordar}
+            \item {Reconocer a los asistentes}
+            \item {Preparar una \textbf{agenda} que incluya horas de inicio y finalización, ubicación, acceso remoto, objetivos y material complementario}
+            \item {Distribuir la agenda de antemano}
         \end{description} & \begin{description}
             \item {Hacer introducciones si son necesarias y revisar mensajes claves}
-            \item {Presentar los datos junto con sus observaciones, interpretaciones e implicancias}
+            \item {Presentar los datos junto a cualquier observación, interpretación e implicancia}
+            \item {Hacer participar a los asistentes en base a su experiencia y puntos de vista}
             \item {Tomar notas}
             \item {Determinar pasos a seguir}
         \end{description} &  \begin{description}
-            \item {Distribuir notas y datos}
+            \item {Distribuir notas, datos y material extra}
             \item {Confirmar pasos a seguir y plazos para medidas adicionales}
-            \item {Pedir comentarios}
+            \item {Pedir comentarios y preguntas}
         \end{description} \\
         \hline
     \end{tabular}
 \end{table}
-
-
-
-\subsection{Roles y Situaciones en el Estudio de Datos}
-\subsubsection{\gls{stkhldrs} más comunes a interactuar}
-\begin{itemize}
-    \item {\textbf{Equipo Ejecutivo} : Proporciona liderazgo estratégico y operativo a la empresa. Generalmente están muy ocupados, por lo que se trabaja con el jefe/gerente de proyecto. \textit{Ejemplos : Vicepresidentes, Directores de Marketing, Profesionales}}
-    \item {\textbf{Equipo Orientado al Cliente} : Cualquier persona en la organización que tenga algún nivel de interacción con clientes, actuales y potenciales}
-    \item {\textbf{Equipo Ciencia de Datos} : 
-    \begin{description}
-        \item[Analista de Datos]{: Recolección, transformación y organización de datos, con tal de realizar conclusiones, predicciones y decisiones basadas en hechos}
-        \item[Ingeniero de Datos]{ : Procesa los datos iniciales para crear un proceso viable. Generalmente es el encargado de prepararlos para los analistas y científicos}
-        \item[Científico de Datos]{ : Creación de modelos y exploración de lo desconocido usando datos sin editar, para encontrar preguntas y problemas nuevos}
-    \end{description}}
-    \item{\textbf{Preguntas para mantenerse enfocado} : 
-    \begin{itemize}
-        \item {Quiénes son los \gls{stkhldrs} primarios y secundarios?}
-        \item {Quién administra los datos?}
-        \item {Dónde se puede acudir por ayuda?}
-        \item {\textbf{Limitaciones de datos} : 
-        \begin{itemize}
-            \item{Datos incompletos}
-            \item{Omisión de datos desalineados, que no tienen métricas estandarizadas}
-            \item{Gestión de datos sucios}
-        \end{itemize}}
-    \end{itemize}}
-\end{itemize}
-
-\begin{description}
-    \item[\textit{Scope of Work} - Alcance del Trabajo]{ : Un esquema previamente acordado sobre el trabajo a realizar en un proyecto. Algunos contenidos básicos a cualquier alcance son entregables, hitos, cronogramas e informes. \textit{Declaración de Trabajo ${\neq}$ Alcance de Trabajo}:
-    \begin{description}
-        \item[Declaración]{ : Documento que identifica claramente los productos y servicios que un proveedor o contratista proporcionará a una organización. Incluye objetivos, directrices, programas y costos}
-        \item[Alcance]{ : Se basa en proyectos y establece las expectativas y límites de un proyecto. Puede incluirse en la Declaración previa para ayudar a definir los resultados del proyecto}
-    \end{description}}
-\end{description}
 
 \newpage
