--- a/notes/fases_add.tex
+++ b/notes/fases_add.tex
@@ -1,47 +1,47 @@
 \section{Ciclo de Vida del Análisis de Datos}
-Segun Google Data Analytics
 
-\input{act}
+\input{ask}
 
-\subsection{\textit{Prepare - }Preparar}
+\subsection{\textit{Prepare} - Preparar}
+Una vez definido el proyecto, se \textbf{planifican} los datos y sus características
 \begin{itemize}
-    \item {Planificación de datos de acuerdo al proyecto
-    \begin{itemize}
-        \item {Seleccionar tipo de datos de acuerdo al problema: métricas, formatos y estructuras}
-        \item {Determinar medidas de seguridad para proteger los datos}
-        \item {Determinar almacenamiento, administración y acceso a datos}
-    \end{itemize}}
-    \item {Recolección y Captura}
-    \item {Tomar medidas para evitar sesgos y mantener imparcialidad}
-    \item {\textbf{Preguntas Efectivas:}
+   \item {Determinar métricas, formatos y estructuras de datos}
+   \item {Establecer medidas de seguridad y protección}
+   \item {Acordar almacenamiento, administración y acceso}
+   \item {Tomar medidas contra sesgos y parcialidad}
+    \item {\textbf{Preguntas Efectivas} :
     \begin{itemize}
         \item {Qué necesito para descubrir cómo resolver este problema?}
         \item {Qué investigación previa debo realizar?}
     \end{itemize}}
 \end{itemize}
 
-\subsection{\textit{Process - }Procesar}
+\subsection{\textit{Process} - Procesar}
+Ya teniendo los datos, estos pasan por una \textbf{limpieza} para corregir limitaciones
 \begin{itemize}
-    \item {\textbf{Limpieza de datos : }
-    \begin{itemize}
-        \item {Uso de funciones en spreadsheets y SQL/DB para encontrar datos incorrectos, espacios adicionales o entradas repetidas}
-        \item {Manejo de imprecisiones y casos extremos}
-        \item {Comprobar sesgos, errores e inexactitudes}
-    \end{itemize}}
-    \item {\textbf{Preguntas efectivas:}
+    \item {Buscar datos incorrectos, repetidos o espacios vacíos en \textit{Spreadsheets} y \textit{DB}}
+    \item {Manejar imprecisiones, casos extremos y datos desalineados sin métricas estandarizadas}
+    \item {Comprobar presencia de sesgos e inexactitudes}
+    \item {\textbf{Preguntas Efectivas} :
     \begin{itemize}
         \item {Cómo puedo limpiar datos para que mis datos sean más coherentes?}
         \item {Qué errores podrían interponerse en mi camino?}
     \end{itemize}}
 \end{itemize}
 
-\subsection{\textit{Analyze - }Analizar}
+\subsection{\textit{Analyze} - Analizar}
 \begin{itemize}
     \item {Exploración de los datos ya preparados :
     \begin{itemize}
         \item {Formatear, transformar, ordenar y filtrar datos}
-        \item {Combinar datos de varias fuentes}
-        \item {Realizar diversos cálculos en spreadsheets y DB}
+        \item {Combinar datos de varias fuentes, teniendo en mente su perspectiva o \gls{cntxt} : 
+        \begin{description}
+            \item[Quién]{ : Creó, recopiló, financió la recopilación de datos}
+            \item[Qué]{ : Circunstancias que generan impacto en cualquier parte del mundo}
+            \item[Dónde]{ : Origen de los datos}
+            \item[Cuándo]{ : Momento de creación o recopilación} 
+            \item[Cómo]{ : Método con el que se creó o recopiló} 
+        \end{description}}
     \end{itemize}}
     \item {Identificar patrones y conclusiones}
     \item {Realizar predicciones y recomendaciones}
@@ -53,7 +53,7 @@ Segun Google Data Analytics
     \end{itemize}}
 \end{itemize}
 
-\subsection{\textit{Share - }Compartir}
+\subsection{\textit{Share} - Compartir}
 \begin{itemize}
     \item {Interpretar resultados a través de \textbf{Visualización}}
     \item {Comunicar resultados : 
@@ -70,7 +70,7 @@ Segun Google Data Analytics
     \end{itemize}}
 \end{itemize}
 
-\subsection{\textit{Act - }Actuar}
+\subsection{\textit{Act} - Actuar}
 \begin{itemize}
     \item {Transformar resultados en acciones de cambio}
     \item {Resolver el desafío empresarial definido al principio del ciclo}
