--- a/notes/gloss.tex
+++ b/notes/gloss.tex
@@ -3,7 +3,7 @@
 \newglossaryentry{cntxt}{
     name = Contexto,
     sort = {contexto},
-    description = {Condición en la que algo ocurre o existe}
+    description = {Comprensión del ambiente en que se genera, produce o utiliza una idea, en la que algo ocurre o existe}
 }
 
 \newglossaryentry{attrbt}{
@@ -39,7 +39,7 @@
 \newglossaryentry{stkhldrs}{
     name = \textit{Stakeholders},
     sort = {stakeholders},
-    description = {\textit{Interesados}, personas que invierten tiempo y recursos en el proyecto, y que les interesa el resultado final}
+    description = {\textit{Interesados}, personas que invierten tiempo y recursos en el proyecto, y que les interesa el resultado final. El tipo \textbf{Primario} tiene relación directa con el proyecto y se verá afectado por su resultado como \textit{directivos y gerentes}. El tipo \textbf{Secundario} también se verá afectado, pero no posee intereses directos como \textit{cotrabajadores}}
 }
 
 \newglossaryentry{prblmdmn}{
@@ -76,6 +76,18 @@
     name = La Nube,
     sort = {nube},
     description = {Ubicación virtual donde pueden almacenarse datos, en vez de utilizar un \textit{harddrive} de computador}
+}
+
+\newglossaryentry{5w}{
+    name = \textit{Five Why's},
+    sort = {five},
+    description = {Práctica para encontrar la raíz de un problema, que consiste en preguntar "por qué?" cinco veces}
+}
+
+\newglossaryentry{gpnlss}{
+    name = \textit{Gap Analysis} - Análisis de Déficit,
+    sort = {analisis deficit},
+    description = {Método de evaluación y examinación de un proceso y cómo funciona actualmente, en contraste con la meta y estado ideal}
 }
 
 \glsaddallunused
