starting w u3, data structures

--- a/notes/ask.tex
+++ b/notes/ask.tex
@@ -8,19 +8,29 @@ Se establece un \textbf{Desafío/Objetivo Empresarial}, y las características d
     \item {\gls{gpnlss}, para encontrar déficits en el proyecto}
 \end{itemize}
 
+\subsubsection{Tipos de Problemas}
+\begin{itemize}
+    \item {\textbf{Realizar Predicciones} : Decisiones informadas para visualizar las cosas a futuro}
+    \item {\textbf{Categorizar Cosas} : Asignar información a dos grupos de datos distintos con cualidades comunes}
+    \item {\textbf{Encontrar Algo Inusual} : Identificar datos que se salen de la norma}
+    \item {\textbf{Identificar Temas} : Agrupar información categorizada en conceptos más amplios}
+    \item {\textbf{Descubrir Conexiones} : Encontrar desafíos similares encontrados por otros, para combinar datos y conclusiones}
+    \item {\textbf{Encontrar Patrones} : Utilizar datos históricos para entender qué ocurrió en el pasado, y que podría repetirse}
+\end{itemize}
+
 
 \subsubsection{Preguntas \textit{SMART}}
-Preguntas altamente efectivas y usualmente abiertas, que incitan a respuestas útiles. \textit{Evitar preguntas \textbf{sugestivas} con respuestas en particular, \textbf{cerradas} con respuestas breves o de una sola palabra, e \textbf{imprecisas} que no ofrecen \gls{cntxt}}
+Preguntas altamente efectivas y usualmente abiertas, que incitan a respuestas útiles. \textit{Esto contrasta con las preguntas \textbf{sugestivas} con respuestas en particular,\textbf{imprecisas} que no ofrecen \gls{cntxt}, y \textbf{cerradas} con respuestas breves o de una sola palabra}
 \begin{description}
     \item [\textit{Specific}]{ : Simples y enfocadas en una cantidad pequeña de ideas relacionadas entre si. \textbf{Esta pregunta tiene el \gls{cntxt} necesario, aborda el problema o entrega la respuesta que necesito?}}
-    \item [\textit{Measurable}]{ : Cuantificables y evaluables. \textbf{Esta pregunta da respuestas que se pueden medir?}}
+    \item [\textit{Measurable}]{ : Cuantificables y evaluables. \textbf{Esta pregunta da respuestas medibles?}}
     \item [\textit{Action-Oriented}]{ : Promueven el cambio y la acción. \textbf{Esta pregunta entregará información que ayude a diseñar un plan de acción o cambio?}}
     \item [\textit{Relevant}]{ : Tienen importancia en el problema a resolver. \textbf{Esta pregunta se relaciona con un problema en específico?}}
     \item [\textit{Time-Bound}]{ : Son específicas al periodo de tiempo estudiado. \textbf{La pregunta es relevante para el periodo establecido?}}
 \end{description}
 
 \subsubsection{Comunicación Clara y Efectiva}
-Mantención de buenas relaciones con colegas, \gls{stkhldrs} y miembros del equipo. Es importante tomar en cuenta \textbf{quién} es la audiencia, \textbf{qué saben} previamente y \textbf{qué necesitan} saber. En base a eso, es posible establecer formas de comunicación
+Mantención de buenas relaciones con colegas, \gls{stkhldrs} y miembros del equipo a través de buenas prácticas de diálogo. \textit{Es importante tomar en cuenta \textbf{quién} es la audiencia, \textbf{qué saben} previamente y \textbf{qué necesitan} saber}
 
 \paragraph{Identificar antes de Comunicar}
 \begin{itemize}
