--- a/notes/fases_add.tex
+++ b/notes/fases_add.tex
@@ -1,20 +1,7 @@
 \section{Ciclo de Vida del Análisis de Datos}
 
 \input{ask}
-
-\subsection{\textit{Prepare} - Preparar}
-Una vez definido el proyecto, se \textbf{planifican} los datos y sus características
-\begin{itemize}
-   \item {Determinar métricas, formatos y estructuras de datos}
-   \item {Establecer medidas de seguridad y protección}
-   \item {Acordar almacenamiento, administración y acceso}
-   \item {Tomar medidas contra sesgos y parcialidad}
-    \item {\textbf{Preguntas Efectivas} :
-    \begin{itemize}
-        \item {Qué necesito para descubrir cómo resolver este problema?}
-        \item {Qué investigación previa debo realizar?}
-    \end{itemize}}
-\end{itemize}
+\input{prepare}
 
 \subsection{\textit{Process} - Procesar}
 Ya teniendo los datos, estos pasan por una \textbf{limpieza} para corregir limitaciones
