--- a/notes/gloss.tex
+++ b/notes/gloss.tex
@@ -39,7 +39,7 @@
 \newglossaryentry{stkhldrs}{
     name = \textit{Stakeholders},
     sort = {stakeholders},
-    description = {\textit{Interesados}, personas que invierten tiempo y recursos en el proyecto, y que les interesa el resultado final. El tipo \textbf{Primario} tiene relación directa con el proyecto y se verá afectado por su resultado como \textit{directivos y gerentes}. El tipo \textbf{Secundario} también se verá afectado, pero no posee intereses directos como \textit{cotrabajadores}}
+    description = {\textit{Interesados}, personas que invierten tiempo y recursos en el proyecto, y que les interesa el resultado final. El tipo \textbf{Primario} tiene relación directa con el proyecto y se verá afectado por su resultado, como \textit{directivos y gerentes}. El tipo \textbf{Secundario} también se verá afectado, pero no posee intereses directos como \textit{empresas externas}}
 }
 
 \newglossaryentry{prblmdmn}{
